--- a/content/1.index.md
+++ b/content/1.index.md
@@ -3,7 +3,7 @@ navigation:
   title: 허몸
 ---
 
-# Content Wind
+# Content Windㅗㅎㅎㅎㅎㅎ
 
 A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Content](https://content.nuxt.com), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) ✨
 
